etl-api/tests/integration/snapshots/r#mod__integration__pipelines_test__all_pipelines_can_be_read.snap
---
source: api/tests/integration/pipelines_test.rs
expression: pipeline.config
---
PipelineConfig {
    publication_name: "publication",
    batch: Some(
        BatchConfig {
            max_size: 1000,
            max_fill_ms: 5,
        },
    ),
    apply_worker_init_retry: Some(
        RetryConfig {
            max_attempts: 5,
            initial_delay_ms: 1000,
            max_delay_ms: 2000,
            backoff_factor: 0.5,
        },
    ),
    max_table_sync_workers: Some(
        2,
    ),
}
